--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -110,14 +110,7 @@ jobs:
         if: ${{ inputs.dry-run == false && env.SKIP == 'false' }}
         uses: google-github-actions/setup-gcloud@v2
         with:
-          install_components: beta,gke-gcloud-auth-plugin
-
-      - name: Setup NumPy
-        id: setup-numpy
-        if: ${{ inputs.dry-run == false && env.SKIP == 'false' }}
-        shell: bash
-        # https://cloud.google.com/iap/docs/using-tcp-forwarding#increasing_the_tcp_upload_bandwidth
-        run: $(gcloud info --format="value(basic.python_location)") -m pip install numpy
+          install_components: gke-gcloud-auth-plugin
 
       - name: Setup kubeconfig
         id: setup-kubeconfig
