Rename dockerhub vars with container_registry

--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -3,9 +3,9 @@ on:
     secrets:
       env_vars:
         required: false
-      dockerhub_user:
+      container_registry_user:
         required: false
-      dockerhub_pat:
+      container_registry_pat:
         required: false
     inputs:
       command:
@@ -159,10 +159,10 @@ jobs:
           kubectl config set clusters.${{ env.DPLATFORM }}.proxy-url http://localhost:57755
           kubectl cluster-info
 
-      - name: Login to dockerhub
-        if:  ${{ env.SKIP == 'false' && inputs.dockerhub_user != '' && inputs.dockerhub_pat != '' }}
+      - name: Login to tenant provided registry
+        if:  ${{ env.SKIP == 'false' && inputs.container_registry_user != '' && inputs.container_registry_pat != '' }}
         run: |
-          echo ${{ inputs.dockerhub_pat }} | docker login -u ${{ inputs.dockerhub_user }} --password-stdin
+          echo ${{ inputs.container_registry_pat }} | docker login -u ${{ inputs.container_registry_user }} --password-stdin
 
       - name: Run Command
         id: run-command
