--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -3,9 +3,9 @@ on:
     secrets:
       env_vars:
         required: false
-      dockerhub_user:
+      container_registry_user:
         required: false
-      dockerhub_pat:
+      container_registry_pat:
         required: false
     inputs:
       dry-run:
@@ -51,8 +51,8 @@ jobs:
     uses: ./.github/workflows/p2p-execute-command.yaml
     secrets:
       env_vars: ${{ secrets.env_vars }}
-      dockerhub_user: ${{ secrets.dockerhub_user }}
-      dockerhub_pat: ${{ secrets.dockerhub_pat }}
+      container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
       fail-fast: false
@@ -70,8 +70,8 @@ jobs:
     uses: ./.github/workflows/p2p-execute-command.yaml
     secrets:
       env_vars: ${{ secrets.env_vars }}
-      dockerhub_user: ${{ secrets.dockerhub_user }}
-      dockerhub_pat: ${{ secrets.dockerhub_pat }}
+      container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
       fail-fast: false
@@ -89,8 +89,8 @@ jobs:
     uses: ./.github/workflows/p2p-execute-command.yaml
     secrets:
       env_vars: ${{ secrets.env_vars }}
-      dockerhub_user: ${{ secrets.dockerhub_user }}
-      dockerhub_pat: ${{ secrets.dockerhub_pat }}
+      container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
       fail-fast: false
@@ -108,8 +108,8 @@ jobs:
     uses: ./.github/workflows/p2p-execute-command.yaml
     secrets:
       env_vars: ${{ secrets.env_vars }}
-      dockerhub_user: ${{ secrets.dockerhub_user }}
-      dockerhub_pat: ${{ secrets.dockerhub_pat }}
+      container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
       fail-fast: false
