--- a/.github/workflows/p2p-workflow-prod.yaml
+++ b/.github/workflows/p2p-workflow-prod.yaml
@@ -7,6 +7,9 @@ on:
         required: false
       container_registry_pat:
         required: false
+      container_registry_url:
+        type: string
+        required: false
     inputs:
       source:
         required: false
@@ -46,6 +49,7 @@ jobs:
       env_vars: ${{ secrets.env_vars }}
       container_registry_user: ${{ secrets.container_registry_user }}
       container_registry_pat: ${{ secrets.container_registry_pat }}
+      container_registry_url: ${{ secrets.container_registry_url }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
       fail-fast: false
