--- a/.github/workflows/p2p-workflow-extended-test.yaml
+++ b/.github/workflows/p2p-workflow-extended-test.yaml
@@ -7,6 +7,9 @@ on:
         required: false
       container_registry_pat:
         required: false
+      container_registry_url:
+        type: string
+        required: false
     inputs:
       source:
         required: false
@@ -50,6 +53,7 @@ jobs:
     secrets:
       env_vars: ${{ secrets.env_vars }}
       container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_url: ${{ secrets.container_registry_url }}
       container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source ) }}
