--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -7,6 +7,9 @@ on:
         required: false
       container_registry_pat:
         required: false
+      container_registry_url:
+        type: string
+        required: false
     inputs:
       dry-run:
         required: false
@@ -52,6 +55,7 @@ jobs:
     secrets:
       env_vars: ${{ secrets.env_vars }}
       container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_url: ${{ secrets.container_registry_url }}
       container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
@@ -71,6 +75,7 @@ jobs:
     secrets:
       env_vars: ${{ secrets.env_vars }}
       container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_url: ${{ secrets.container_registry_url }}
       container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
@@ -90,6 +95,7 @@ jobs:
     secrets:
       env_vars: ${{ secrets.env_vars }}
       container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_url: ${{ secrets.container_registry_url }}
       container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
@@ -109,6 +115,7 @@ jobs:
     secrets:
       env_vars: ${{ secrets.env_vars }}
       container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_url: ${{ secrets.container_registry_url }}
       container_registry_pat: ${{ secrets.container_registry_pat }}
     strategy:
       matrix: ${{ fromJSON(inputs.source) }}
