--- a/.github/workflows/p2p-workflow-extended-test.yaml
+++ b/.github/workflows/p2p-workflow-extended-test.yaml
@@ -3,6 +3,12 @@ on:
     secrets:
       env_vars:
         required: false
+      container_registry_user:
+        required: false
+      container_registry_pat:
+        required: false
+      container_registry_url:
+        required: false
     inputs:
       source:
         required: false
@@ -39,15 +45,15 @@ on:
         required: false
         type: string
 
-env:
-  REGION: ${{ inputs.region }}
-
 jobs:
   run-tests:
     uses: ./.github/workflows/p2p-execute-command.yaml
     if: success() && (github.ref == inputs.main-branch )
     secrets:
       env_vars: ${{ secrets.env_vars }}
+      container_registry_user: ${{ secrets.container_registry_user }}
+      container_registry_pat: ${{ secrets.container_registry_pat }}
+      container_registry_url: ${{ secrets.container_registry_url }}
     strategy:
       matrix: ${{ fromJSON(inputs.source ) }}
       fail-fast: false
