--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -125,3 +125,9 @@ jobs:
             fi
         fi
         echo "previous_version=${PREVIOUS_TAG}" >> "$GITHUB_OUTPUT"
+
+    - name: "Output version: ${{ steps.setversion.outputs.version }}"
+      id: outputversion
+      shell: bash
+      run: |
+        echo "Output version: ${{ steps.setversion.outputs.version }}"
