Switch gke eaccess from internal ip to dns based endpoint

--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -120,7 +120,14 @@ jobs:
           context_name: gke_${{ env.PROJECT_ID }}_${{ inputs.region }}_${{ env.DPLATFORM }}
           cluster_name: ${{ env.DPLATFORM }}
           location: ${{ inputs.region }}
-          use_internal_ip: true
+          project_id: ${{ env.PROJECT_ID }}
+          use_dns_based_endpoint: true
+
+      - name: Test kubeconfig
+        id: test-kubeconfig
+        if: ${{ inputs.dry-run == false && env.SKIP == 'false' }}
+        run: |
+          kubectl cluster-info
 
       - name: Login to Artifact Registry
         uses: docker/login-action@v3
@@ -138,28 +145,6 @@ jobs:
             echo ::add-mask::${i#*=}
             printf '%s\n' $i >> $GITHUB_ENV
           done
-
-      - name: Install iapc
-        id: install-iapc
-        if: ${{ inputs.dry-run == false && env.SKIP == 'false' }}
-        uses: jaxxstorm/action-install-gh-release@v1
-        with:
-          repo: cedws/iapc
-          tag: v0.1.9
-          extension-matching: 'disable'
-          rename-to: iapc
-          chmod: 755
-
-      - name: Start Tunnel
-        id: start-tunnel
-        if: ${{ inputs.dry-run == false && env.SKIP == 'false' }}
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-        run: |
-          nohup sh -c "iapc --log-level warn to-instance ${{ env.DPLATFORM }}-bastion -p 3128 --listen 127.0.0.1:57755 --project ${{ env.PROJECT_ID }} --zone ${{ inputs.zone }}" &
-          sleep 4
-          kubectl config set clusters.${{ env.DPLATFORM }}.proxy-url http://localhost:57755
-          kubectl cluster-info
 
       - name: Login to tenant provided registry
         env:
