Switch from container to artifact registry commands

--- a/.github/workflows/p2p-get-latest-image.yaml
+++ b/.github/workflows/p2p-get-latest-image.yaml
@@ -83,7 +83,7 @@ jobs:
           DRY_RUN: ${{ inputs.dry-run }}
         working-directory: ${{ inputs.working-directory }}
         run: |
-            [ $DRY_RUN == false ] && version=$(gcloud container images list-tags ${REGISTRY}/${REGISTRY_PATH}/${IMAGE_NAME} --limit=1 --format=json )
+            [ $DRY_RUN == false ] && version=$(gcloud artifacts docker images list ${REGISTRY}/${REGISTRY_PATH}/${IMAGE_NAME} --include-tags --sort-by=~buildTime --limit=1 --format=json 2>/dev/null)
             [ $? -gt 0 ] && [ $DRY_RUN == false ] && echo "exiting" && exit 1
             [ $DRY_RUN == true ] && version="[{\"tags\": [\"0.0.0\"]}]"
             echo "version=$(echo ${version} | jq -r '.[0].tags[0]')" >> "$GITHUB_OUTPUT"
