--- a/.github/workflows/p2p-get-latest-image.yaml
+++ b/.github/workflows/p2p-get-latest-image.yaml
@@ -83,10 +83,30 @@ jobs:
           DRY_RUN: ${{ inputs.dry-run }}
         working-directory: ${{ inputs.working-directory }}
         run: |
-            [ $DRY_RUN == false ] && version=$(gcloud artifacts docker images list ${REGISTRY}/${REGISTRY_PATH}/${IMAGE_NAME} --include-tags --sort-by=~buildTime --limit=1 --format=json 2>/dev/null)
+            set -o pipefail
+            [ $DRY_RUN == false ] && version=$(gcloud artifacts docker images list ${REGISTRY}/${REGISTRY_PATH}/${IMAGE_NAME} --include-tags --sort-by=~buildTime --format=json 2>/dev/null | jq -r '.[].tags[]' | jq -Rrn '[inputs] | sort_by(
+              # extract name and version
+              match("[0-9]+[0-9.]*";"").offset as $version_index
+              | .[:$version_index] as $name
+              | .[$version_index:]
+              # ignore build
+              | split("+")[0]
+              # extract version core and pre-release as arrays of numbers and strings
+              | split("-")
+              | (.[0] | split(".") | map(tonumber? // .)) as $version_core
+              | (.[1:] | join("-") | split(".") | map(tonumber? // .)) as $pre_release
+              # sort by name
+              | $name,
+              # sort by version core
+              $version_core,
+              # pre-release versions have a lower precedence than the associated normal version
+              ($pre_release | length)==0,
+              # sort by pre-release
+              $pre_release
+            ) | reverse | .[0]')
             [ $? -gt 0 ] && [ $DRY_RUN == false ] && echo "exiting" && exit 1
-            [ $DRY_RUN == true ] && version="[{\"tags\": [\"0.0.0\"]}]"
-            echo "version=$(echo ${version} | jq -r '.[0].tags[0]')" >> "$GITHUB_OUTPUT"
+            [ $DRY_RUN == true ] && version="0.0.0"
+            echo "version=${version}" >> "$GITHUB_OUTPUT"
 
       - name: "Output version: ${{ steps.get-latest-image.outputs.version }}"
         id: outputversion
